# ffi-testability

./: README.md  queue.c  queue.h  stack.yaml  test_queue.py
ffi-hs/: ffi-hs.cabal  makefile
ffi-hs/src/: InlineC.hs  Internal.hs  Main.hs  PutGet.hs  Test.hs  Types.hs
