name:                ffi-hs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ffi-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Main
  other-modules:   Internal
                   InlineC
                   Types
                   PutGet
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       containers,
                       inline-c > 0.5.0.0
  hs-source-dirs:      src/
  default-language:    Haskell2010

executable ffi-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       containers,
                       inline-c > 0.5.0.0
