name:                ffi-hs
version:             0.1.0.0
synopsis:            Testing C API using FFI
description:         Please see README.md
homepage:            http://github.com/githubuser/ffi-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Fredrik Dyrkell, Marco Zocca
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ocramz/ffi-testability

library
  exposed-modules: Test
  other-modules:   Internal
                   InlineC
                   Types
                   PutGet
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       containers,
                       inline-c > 0.5.0.0
  hs-source-dirs:      src/
  include-dirs:        cbits/
  c-sources:           src/InlineC.c
  default-language:    Haskell2010

executable ffi-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       template-haskell,
                       containers,
                       inline-c > 0.5.0.0
